@@ -1,0 +1,3 @@
+#!/bin/bash
+autoreconf --install
+automake --add-missing --copy >/dev/null 2>&1
