@@ -1,5 +1,7 @@
 2014-11-11  Arjen de Rijke  <arjenderijke@gmail.com>
 
+	* configure.ac: Use version created by autoscan
+
 	* Makefile.in (Makefile): Use makefile templates
 
 	* configure.ac: Add autotools support
